==> uppsala-makerspace/LasaurGrbl/stepper.c <==
#define __DELAY_BACKWARD_COMPATIBLE__  // _delay_us() make backward compatible see delay.h
#include <math.h>
#include <stdlib.h>
#include <string.h>
#include <inc/hw_types.h>
#include <inc/hw_memmap.h>
#include <inc/hw_timer.h>
#include <inc/hw_ints.h>
#include <inc/hw_gpio.h>
#include <driverlib/gpio.h>
#include <driverlib/rom.h>
#include <driverlib/sysctl.h>
#include <driverlib/timer.h>
#include <driverlib/interrupt.h>
#include "config.h"
#include "stepper.h"
#include "gcode.h"
#include "planner.h"
#include "sense_control.h"
#include "temperature.h"
#include "tasks.h"
#include "joystick.h"
#define CYCLES_PER_MICROSECOND (SysCtlClockGet()/1000000)  // 80MHz = 80
#define CYCLES_PER_ACCELERATION_TICK (SysCtlClockGet()/ACCELERATION_TICKS_PER_SECOND)  // 80MHz/100 = 800000

void stepper_init() {  
	// Configure directions of interface pins
	GPIOPinTypeGPIOOutput(STEP_EN_PORT, STEP_EN_MASK);
	GPIOPinTypeGPIOOutput(STEP_DIR_PORT, STEP_DIR_MASK);
	GPIOPinTypeGPIOOutput(STEP_PORT, STEP_MASK);
	GPIOPinTypeGPIOOutput(STEP_PORT, STEP_MASK);

	GPIOPadConfigSet(STEP_PORT, STEP_MASK, GPIO_STRENGTH_8MA_SC, GPIO_PIN_TYPE_STD);
	GPIOPadConfigSet(STEP_DIR_PORT, STEP_DIR_MASK, GPIO_STRENGTH_8MA_SC, GPIO_PIN_TYPE_STD);

	GPIOPinWrite(STEP_PORT, STEP_MASK, 0);
	GPIOPinWrite(STEP_DIR_PORT, STEP_DIR_MASK, STEP_DIR_INVERT);
	GPIOPinWrite(STEP_EN_PORT, STEP_EN_MASK, STEP_EN_MASK ^ STEP_EN_INVERT);

#ifdef MOTOR_Z
	// Use alternative to Stepper (H-Bridge Motor drive)
	GPIOPadConfigSet(SENSE_PORT, STEP_Z_MASK, GPIO_STRENGTH_8MA, GPIO_PIN_TYPE_STD);
	GPIOPinTypeGPIOOutput(STEP_DIR_PORT, STEP_Z_MASK);
	GPIOPinWrite(STEP_DIR_PORT, STEP_Z_MASK, 0);
#endif

	// Configure timer
	SysCtlPeripheralEnable(SYSCTL_PERIPH_TIMER1);
	TimerConfigure(STEPPING_TIMER, TIMER_CFG_SPLIT_PAIR | TIMER_CFG_A_PERIODIC | TIMER_CFG_B_ONE_SHOT);

	TimerIntRegister(STEPPING_TIMER, TIMER_A, stepper_isr);
	ROM_IntEnable(INT_TIMER1A);
	TimerIntEnable(STEPPING_TIMER, TIMER_TIMA_TIMEOUT);
    IntPrioritySet(INT_TIMER1A, CONFIG_STEPPER_PRIORITY);

#ifdef CONFIG_STEPPER_USE_PULSE_TIMER
	TimerIntRegister(STEPPING_TIMER, TIMER_B, pulse_isr);
	ROM_IntEnable(INT_TIMER1B);
	TimerIntEnable(STEPPING_TIMER, TIMER_TIMB_TIMEOUT);
    IntPrioritySet(INT_TIMER1B, CONFIG_STEPPER_PRIORITY);
#endif

	adjust_speed(MINIMUM_STEPS_PER_MINUTE);
	clear_vector(stepper_position);
	stepper_set_position( CONFIG_X_ORIGIN_OFFSET,
                          CONFIG_Y_ORIGIN_OFFSET,
                          CONFIG_Z_ORIGIN_OFFSET );

	acceleration_tick_counter = 0;
	current_block = NULL;
	stop_requested = false;
	stop_status = GCODE_STATUS_OK;
	busy = false;
  
	// start in the idle state
	// The stepper interrupt gets started when blocks are being added.
	stepper_go_idle();

#ifndef DEBUG_IGNORE_SENSORS
	// Go Home
	gcode_do_home();
#endif
}

void stepper_wake_up() {
  if (!processing_flag) {
    processing_flag = true;

    // Initialize stepper output bits
	GPIOPinWrite(STEP_PORT, STEP_MASK, 0);
	GPIOPinWrite(STEP_DIR_PORT, STEP_DIR_MASK, STEP_DIR_INVERT);
	GPIOPinWrite(STEP_EN_PORT, STEP_EN_MASK, STEP_EN_MASK ^ STEP_EN_INVERT);

    // Enable stepper driver interrupt
    TimerEnable(STEPPING_TIMER, TIMER_A);
  }
}

void stepper_go_idle() {
  processing_flag = false;
  current_block = NULL;
  // Disable stepper driver interrupt
  TimerDisable(STEPPING_TIMER, TIMER_A);
  control_laser(0, 0);
}

static uint32_t config_step_timer(uint32_t cycles) {
	uint32_t prescaled_cycles = cycles;

	// Temporarily disable the timer
	ROM_IntDisable(INT_TIMER1A);

	timer_prescaler = 0;

	while (prescaled_cycles > 65535)
	{
		timer_prescaler++;
		prescaled_cycles /= 2;
	}

	timer_preload = prescaled_cycles;

	//set period
	TimerPrescaleSet(STEPPING_TIMER, TIMER_A, timer_prescaler);
	TimerLoadSet(STEPPING_TIMER, TIMER_A, timer_preload);

	// Re-Enable the Timer
	ROM_IntEnable(INT_TIMER1A);

	return(timer_preload * (1 + timer_prescaler));
}

static void adjust_speed( uint32_t steps_per_minute ) {
  // steps_per_minute is typicaly just adjusted_rate
  if (steps_per_minute < MINIMUM_STEPS_PER_MINUTE) { steps_per_minute = MINIMUM_STEPS_PER_MINUTE; }
  cycles_per_step_event = config_step_timer( (CYCLES_PER_MICROSECOND*1000000/steps_per_minute) * 60 );

  if (cycles_per_step_event == 0)
  {
	  control_laser(0, 0);
	  stepper_request_stop(GCODE_STATUS_BAD_NUMBER_FORMAT);
  }

  // This can be called from init, so make sure we don't dereference a NULL block.
  if (current_block != NULL)
  {
	  uint8_t constrained_intensity = current_block->laser_pwm;
	  if (current_block->laser_mmpp == 0) {
		  // beam dynamics (not using PPI)
		  uint8_t adjusted_intensity = current_block->laser_pwm *
									   ((float)steps_per_minute/(float)current_block->nominal_rate);
		  constrained_intensity = max(adjusted_intensity, 0);
		  control_laser(constrained_intensity, 0);
	  }
	  control_laser_intensity(constrained_intensity);
  }
}

static void homing_cycle(bool x_axis, bool y_axis, bool z_axis, bool reverse_direction, uint32_t microseconds_per_pulse) {
  
  uint32_t step_delay = microseconds_per_pulse - CONFIG_PULSE_MICROSECONDS;
  uint8_t out_dir_bits = STEP_DIR_MASK;
  uint8_t limit_bits;
  uint8_t x_overshoot_count = 24;
  uint8_t y_overshoot_count = 24;
  uint8_t z_overshoot_count = 24;

  if (x_axis) { out_step_bits |= (1<<STEP_X_BIT); }
  if (y_axis) { out_step_bits |= (1<<STEP_Y_BIT); }
  if (z_axis) { out_step_bits |= (1<<STEP_Z_BIT); }
  
  // Invert direction bits if this is a reverse homing_cycle
  if (reverse_direction) {
    out_dir_bits ^= STEP_DIR_MASK;
  }
  
  // Apply the global invert mask
  out_dir_bits ^= STEP_DIR_INVERT;
  
  // Set direction pins
	GPIOPinWrite(STEP_DIR_PORT, STEP_DIR_MASK, out_dir_bits);
  
  for(;;) {

	limit_bits = (SENSE_X_LIMIT)?0x01:0;
	limit_bits |= (SENSE_Y_LIMIT)?0x02:0;
	limit_bits |= (SENSE_Z_LIMIT)?0x04:0;

    if (reverse_direction) {         
      // Invert limit_bits if this is a reverse homing_cycle
      limit_bits ^= 0x07;
    }
    if (x_axis && (limit_bits & 0x01)) {
      if(x_overshoot_count == 0) {
        x_axis = false;
        out_step_bits ^= (1<<STEP_X_BIT);
      } else {
        x_overshoot_count--;
      }     
    } 
    if (y_axis && (limit_bits & 0x02)) {
      if(y_overshoot_count == 0) {
        y_axis = false;
        out_step_bits ^= (1<<STEP_Y_BIT);
      } else {
        y_overshoot_count--;
      }        
    }
    if (z_axis && (limit_bits & 0x04)) {
      if(z_overshoot_count == 0) {
        z_axis = false;
        out_step_bits ^= (1<<STEP_Z_BIT);
      } else {
        z_overshoot_count--;
      }
    }
    if(x_axis || y_axis || z_axis) {
        // step all axes still in out_bits
    	GPIOPinWrite(STEP_PORT, STEP_MASK, out_step_bits);
        __delay_us(CONFIG_PULSE_MICROSECONDS);
    	GPIOPinWrite(STEP_PORT, STEP_MASK, 0);
        __delay_us(step_delay);
    } else { 
        break;
    }
  }
  clear_vector(stepper_position);
  return;
}
